@@ -63,7 +63,6 @@ namespace KJS {
   class List;
   class ListImp;
   class Completion;
-  class CompletionImp;
   class ExecState;
 
   /**
@@ -77,8 +76,7 @@ namespace KJS {
     StringType      = 4,
     NumberType      = 5,
     ObjectType      = 6,
-    ListType        = 8,
-    CompletionType  = 9
+    ListType        = 8
   };
 
   /**
@@ -181,8 +179,8 @@ namespace KJS {
 
     /**
      * Returns the type of value. This is one of UndefinedType, NullType,
-     * BooleanType, StringType NumberType, ObjectType, ReferenceType,
-     * ListType or CompletionType.
+     * BooleanType, StringType NumberType, ObjectType or
+     * ListType.
      *
      * @return The type of value
      */
